<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/preferenceTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@color/design_default_color_primary"
            android:textColor="@color/white"
            android:text="@string/preference_title" />

        <TextView
            android:id="@+id/preferenceFragmentMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/preference_fragment_message_text" />

        <TextView
            android:id="@+id/preferenceTeaMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/preference_tea_message_text" />

        <Button
            android:id="@+id/preferenceTeaEditButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/preference_tea_edit_button" />

        <Button
            android:id="@+id/preferenceTeaDefaultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/preference_tea_default_button" />

        <TextView
            android:id="@+id/storageTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@color/design_default_color_primary"
            android:textColor="@color/white"
            android:text="@string/storage_title" />

        <CheckBox
            android:id="@+id/storageExternalCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/storage_external_checkbox" />

        <TextView
            android:id="@+id/storageMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/storageEditMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="100dp"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/storageWriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/storage_write_button"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

            <Button
                android:id="@+id/storageReadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/storage_read_button"
                style="@style/Widget.MaterialComponents.Button.TextButton" />
        </LinearLayout>
        <TextView
            android:id="@+id/databaseTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@color/design_default_color_primary"
            android:textColor="@color/white"
            android:text="@string/database_title" />

        <Button
            android:id="@+id/databaseNoteCreateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/database_note_create_button" />

        <Button
            android:id="@+id/databaseNoteShowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/database_note_show_button" />

        <TextView
            android:id="@+id/contentProviderTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@color/design_default_color_primary"
            android:textColor="@color/white"
            android:text="@string/content_provider_title" />

        <Button
            android:id="@+id/contentProviderSmsShowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/content_provider_sms_show_button" />
    </LinearLayout>
</ScrollView>